# genplis

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: 1980s.m3ug  Best of the Best.m3ug  Good songs.m3ug  Great songs.m3ug  Metal (great).m3ug  Musicals.m3ug
src/genplis/: __init__.py  __main__.py  core.py  db.py  exceptions.py  files.py  json.py  m3u.py  m3ug.py  main.py  tags.py
src/tinytag/: LICENSE  README.md
tests/: conftest.py  test_db.py  test_m3ug.py  test_tags.py
