[project]
name = "genplis"
version = "0.1.0"
description = "Generate music playlists based off ID3 tags"
authors = [
    { name = "Fidel Ramos", email = "contact.gyldd@8shield.net" }
]
dependencies = [
    "psutil>=6.0.0",
    "xdg-base-dirs>=6.0.2",
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genplis"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
isort.known-first-party = ["genplis"]
select = ["ASYNC", "E4", "E7", "E9", "F", "I", "UP"]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.5",
    "python-lsp-server>=1.12.0",
    "python-lsp-ruff>=2.2.2",
    "pytest>=8.3.3",
]

[tool.rye.scripts]
genplis = { call = "src.genplis.main:main" }
