[project]
name = "genplis"
version = "0.1.0"
description = "Generate music playlists based off ID3 tags"
authors = [
    { name = "Fidel Ramos", email = "contact.gyldd@8shield.net" }
]
dependencies = [
    "psutil>=6.0.0",
    "xdg-base-dirs>=6.0.2",
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
genplis = "genplis.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/genplis"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
isort.known-first-party = ["genplis"]
select = ["ASYNC", "E4", "E7", "E9", "F", "I", "UP"]

[tool.uv]
dev-dependencies = [
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.0",
    "ruff>=0.7.0",
]
