[project]
name = "genplis"
version = "0.1.0"
description = "Generate music playlists based off ID3 tags"
authors = [
    { name = "Fidel Ramos", email = "contact.gyldd@8shield.net" }
]
dependencies = [
    "psutil>=6.0.0",
    "xdg-base-dirs>=6.0.2",
]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
genplis = "genplis.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/genplis"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "src/tinytag/**",
]

[tool.ruff.lint]
isort.known-first-party = ["genplis"]
# only until tinytag is removed from src
isort.known-third-party = ["tinytag"]
select = ["ASYNC", "E4", "E7", "E9", "F", "I", "UP"]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.0",
    "ruff>=0.7.0",
]
